--- a/frontend/Web/src/app/tecnico/paciente/editar-perfil/editar-perfil.component.html
+++ b/frontend/Web/src/app/tecnico/paciente/editar-perfil/editar-perfil.component.html
@@ -151,7 +151,7 @@
                 <tbody>
                   <tr>
                     <th scope="row">RG</th>
-                    <td><input type="text" class="form-control form-control-sm" formControlName="rg"></td>
+                    <td><input type="text" class="form-control form-control-sm" formControlName="rg" mask="00.000.000-0"></td>
                   </tr>
                   <tr>
                     <th scope="row">CPF</th>
