--- a/frontend/Web/src/app/_auth/cadastro/cadastro-paciente/cadastro-paciente.component.html
+++ b/frontend/Web/src/app/_auth/cadastro/cadastro-paciente/cadastro-paciente.component.html
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="form-floating w-50">
-                    <input type="text" class="form-control" id="floatingRg" placeholder="RG" name="rg" [(ngModel)]="paciente.rg" required #rgInput="ngModel" [ngClass]="{ 'is-invalid': form.submitted && rgInput.errors }">
+                    <input type="text" class="form-control" id="floatingRg" placeholder="RG" name="rg" [(ngModel)]="paciente.rg" mask="00.000.000-0" required #rgInput="ngModel" [ngClass]="{ 'is-invalid': form.submitted && rgInput.errors }">
                     <label for="floatingRg">RG</label>
                     <div *ngIf="rgInput.errors && form.submitted" class="invalid-feedback">
                         O RG é obrigatório!
