feat: Refactor paciente dashboard layout and styles

--- a/frontend/Web/src/app/paciente/paciente-layout/paciente-layout.component.html
+++ b/frontend/Web/src/app/paciente/paciente-layout/paciente-layout.component.html
@@ -1,34 +1,59 @@
-<nav class="navbar" [ngClass]="{'open': isNavbarOpen}">
-    <button class="navbar-toggler" (click)="toggleNavbar()">
-      <span class="fas fa-bars"></span>
+<nav class="sidebar" [ngClass]="{ open: isNavbarOpen }">
+  <div class="sidebar-header">
+    <h3 *ngIf="isNavbarOpen">TecnoAging</h3>
+    <button class="sidebar-toggler" (click)="toggleNavbar()">
+      <i class="fas" [ngClass]="isNavbarOpen ? 'fa-times' : 'fa-bars'"></i>
     </button>
-    <div>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/paciente">
-            <i class="fas fa-home"></i>
-            <span class="nav-text">Dashboard</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/paciente/visualizar-perfil">
-            <i class="fas fa-user"></i>
-            <span class="nav-text">Meu Perfil</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" (click)="logout()">
-            <i class="fas fa-sign-out-alt"></i>
-            <span class="nav-text">Sair</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  
-  <div class="main-content container-paciente" [ngClass]="{'shifted': isNavbarOpen}">
-    <a class="fs-5 back" *ngIf="linkVoltarVisivel" (click)="voltar()">
-      <i class="fas fa-chevron-left"></i> Voltar
-    </a>
-    <router-outlet></router-outlet>
   </div>
+
+  <ul class="nav-list">
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        routerLink="/paciente"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+      >
+        <i class="fas fa-home"></i>
+        <span class="nav-text" *ngIf="isNavbarOpen">Inicio</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        routerLink="/paciente/formularios"
+        routerLinkActive="active"
+      >
+        <i class="fas fa-clipboard-list"></i>
+        <span class="nav-text" *ngIf="isNavbarOpen">Formulários</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a
+        class="nav-link"
+        routerLink="/paciente/visualizar-perfil"
+        routerLinkActive="active"
+      >
+        <i class="fas fa-user"></i>
+        <span class="nav-text" *ngIf="isNavbarOpen">Meu Perfil</span>
+      </a>
+    </li>
+  </ul>
+
+  <ul class="nav-list nav-list-bottom">
+    <li class="nav-item">
+      <a class="nav-link logout" (click)="logout()">
+        <i class="fas fa-sign-out-alt"></i>
+        <span class="nav-text" *ngIf="isNavbarOpen">Sair</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
+<div class="main-content" [ngClass]="{ shifted: isNavbarOpen }">
+  <a class="fs-5 back" *ngIf="linkVoltarVisivel" (click)="voltar()">
+    <i class="fas fa-chevron-left"></i> Voltar
+  </a>
+
+  <router-outlet></router-outlet>
+</div>
