--- a/frontend/Web/src/app/paciente/paciente-layout/paciente-layout.component.html
+++ b/frontend/Web/src/app/paciente/paciente-layout/paciente-layout.component.html
@@ -11,6 +11,7 @@
       <a
         class="nav-link"
         routerLink="/paciente"
+        [replaceUrl]="true"
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
       >
