--- a/frontend/Web/src/app/_auth/cadastro/cadastro-paciente/cadastro-paciente.component.css
+++ b/frontend/Web/src/app/_auth/cadastro/cadastro-paciente/cadastro-paciente.component.css
@@ -70,7 +70,7 @@
 
 .form-control:focus {
   outline: none;
-  border-color: #6c63ff;
+  border-color: #0d6efd;
 }
 
 h5 {
@@ -98,7 +98,7 @@ hr.my-3 {
   padding: 0.875rem;
   font-size: 1.1rem;
   color: white;
-  background-color: #6c63ff;
+  background-color: #0d6efd;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -111,7 +111,7 @@ hr.my-3 {
 }
 
 .text-decoration-none {
-  color: #6c63ff;
+  color: #0d6efd;
 }
 
 .text-decoration-none:hover {
