--- a/frontend/Web/src/app/_auth/cadastro/cadastro-tecnico/cadastro-tecnico.component.css
+++ b/frontend/Web/src/app/_auth/cadastro/cadastro-tecnico/cadastro-tecnico.component.css
@@ -97,8 +97,8 @@
 
 .btn-primary,
 .login-button {
-  background-color: #6c63ff;
-  border-color: #6c63ff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
   color: white;
   font-size: 1.1rem;
   padding: 0.75rem;
@@ -123,7 +123,7 @@
 }
 
 .text-decoration-none {
-  color: #6c63ff;
+  color: #0d6efd;
   font-weight: 500;
 }
 .text-decoration-none:hover {
