--- a/frontend/Web/src/app/tecnico/editar-perfil/editar-perfil.component.css
+++ b/frontend/Web/src/app/tecnico/editar-perfil/editar-perfil.component.css
@@ -75,8 +75,8 @@
 }
 
 .btn-primary {
-  background-color: #6c63ff;
-  border-color: #6c63ff;
+  background-color: #0d6efd;
+  border-color: #0d6efd;
 }
 .btn-primary:hover {
   background-color: #594fbf;
