--- a/frontend/Web/src/app/tecnico/tecnico-layout/tecnico-layout.component.css
+++ b/frontend/Web/src/app/tecnico/tecnico-layout/tecnico-layout.component.css
@@ -33,7 +33,7 @@
 }
 
 .sidebar-header h3 {
-  color: #6c63ff;
+  color: #0d6efd;
   font-weight: 700;
   margin: 0;
   font-size: 1.5rem;
@@ -117,14 +117,14 @@
 
 .nav-link:hover {
   background-color: #f0efff;
-  color: #6c63ff;
+  color: #0d6efd;
 }
 .nav-link:hover i {
-  color: #6c63ff;
+  color: #0d6efd;
 }
 
 .nav-link.active {
-  background-color: #6c63ff;
+  background-color: #0d6efd;
   color: white;
   font-weight: 600;
   box-shadow: 0 4px 8px rgba(108, 99, 255, 0.3);
@@ -164,7 +164,7 @@
   display: inline-block;
   margin-bottom: 1.5rem;
   cursor: pointer;
-  color: #6c63ff;
+  color: #0d6efd;
   font-weight: 500;
   text-decoration: none;
 }
