--- a/frontend/Web/src/app/tecnico/paciente/editar-perfil/editar-perfil.component.html
+++ b/frontend/Web/src/app/tecnico/paciente/editar-perfil/editar-perfil.component.html
@@ -264,7 +264,12 @@
                     </tr>
                     <tr>
                       <th scope="row">Telefone</th>
-                      <td><input type="tel" class="form-control form-control-sm" formControlName="telefone" mask="(00) 00000-0000" placeholder="(00) 00000-0000"></td>
+                      <td>
+                        <input type="tel" class="form-control form-control-sm" formControlName="telefone" mask="(00) 0000-0000||(00) 00000-0000" placeholder="(00) 00000-0000">
+                        <small *ngIf="contato.get('telefone')?.invalid && contato.get('telefone')?.touched" class="text-danger">
+                          Formato inválido. Use: (00) 00000-0000
+                        </small>
+                      </td>
                     </tr>
                     <tr>
                       <th scope="row">Parentesco</th>
