--- a/frontend/Web/src/app/tecnico/tecnico-layout/tecnico-layout.component.html
+++ b/frontend/Web/src/app/tecnico/tecnico-layout/tecnico-layout.component.html
@@ -32,11 +32,11 @@
     <li class="nav-item">
       <a
         class="nav-link"
-        routerLink="/cadastro/tecnico"
+        routerLink="/tecnico/gerenciar-tecnicos"
         routerLinkActive="active"
       >
-        <i class="fas fa-user-plus"></i>
-        <span class="nav-text" *ngIf="isNavbarOpen">Cadastrar Técnico</span>
+        <i class="fas fa-users-cog"></i>
+        <span class="nav-text" *ngIf="isNavbarOpen">Gerenciar Técnicos</span>
       </a>
     </li>
   </ul>
